# WhySoSerial

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
src/: CMakeLists.txt  WhySoSerial.fl  serial.cpp  serial.h  wsserial.cpp  wsserial.cxx
