cmake_minimum_required(VERSION 2.6)

project(WhySoSerial)

if(NOT CMAKE_BUILD_TYPE)
	set(CMAKE_BUILD_TYPE Release)
endif()

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)


#if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
#	set(CMAKE_CXX_FLAGS "-Wall -Wextra")
#	set(CMAKE_CXX_FLAGS_DEBUG "-g")
#	set(CMAKE_CXX_FLAGS_RELEASE "-O3")
#elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
#	set(CMAKE_CXX_FLAGS "-Wall -Wextra")
#	set(CMAKE_CXX_FLAGS_DEBUG "-g")
#	set(CMAKE_CXX_FLAGS_RELEASE "-O3")
#	set(CMAKE_EXE_LINKER_FLAGS_RELEASE "-s")
#else
if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
	set(CMAKE_EXE_LINKER_FLAGS "/SUBSYSTEM:WINDOWS")
endif()

find_package(FLTK REQUIRED)
add_subdirectory(src)
